chore: refactor to angular-cli for front-end ui build

--- a/uasdm-ui/src/index.html
+++ b/uasdm-ui/src/index.html
@@ -8,7 +8,7 @@
   <title>
     UAS Data Management
   </title>
-  <link rel="icon" id="appIcon" href="favicon.ico">
+  <link rel="icon" id="appIcon" href="assets/splash_logo_icon.png">
   <style>
     body {
       background-color: #efe9e1
