chore: more consistent communicating with server indicators

--- a/uasdm-ui/src/index.html
+++ b/uasdm-ui/src/index.html
@@ -101,7 +101,7 @@
           Cantarell,
           Helvetica,
           sans-serif;
-        font-size: 5em;
+        font-size: 2em;
         text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
       }
 
@@ -133,8 +133,8 @@
         animation-delay: 1s;
       }
     </style>
+    <i class="fa fa-spinner fa-spin"></i>
     Loading application data
-    <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span>
 
   </uasdm-app>
 </body>
