fix(upload): manual upload instructions are wrong (refs #293)

--- a/uasdm-ui/src/index.html
+++ b/uasdm-ui/src/index.html
@@ -22,7 +22,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
   <script type="text/template" id="qq-template">
-    <div class="qq-uploader-selector qq-uploader" qq-drop-area-text="Drag & drop zipped files (.zip)">
+    <div class="qq-uploader-selector qq-uploader" qq-drop-area-text="Drag & drop files">
         <div class="qq-upload-drop-area-selector qq-upload-drop-area" qq-hide-dropzone>
             <span class="qq-upload-drop-area-text-selector"></span>
         </div>
